<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search_hint">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="mock_title_search">Здесь будет поиск</string>
    <string name="theme_option">Темная тема</string>
    <string name="share_app_option">Поделиться приложением</string>
    <string name="call_support_option">Написать в поддержку</string>
    <string name="license_option">Пользовательское соглашение</string>
    <string name="email">nickitamigal@yandex.ru</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="android_course_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="chooser_title">Отправить с помощью...</string>
    <string name="license_link">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="mailto">mailto:</string>
    <string name="text_plain">text/plain</string>
    <string name="search_title">Поиск</string>
    <string name="track_name_nirvana_mock">Smells Like Teen Spirit</string>
    <string name="track_artist_name_nirvana_mock">Nirvana</string>
    <string name="track_time_nirvana_mock">5:01</string>
    <string name="track_url_nirvana_mock">https://is5-ssl.mzstatic.com/image/thumb/Music115/v4/7b/58/c2/7b58c21a-2b51-2bb2-e59a-9bb9b96ad8c3/00602567924166.rgb.jpg/100x100bb.jpg</string>
    <string name="track_name_mj_mock">Billie Jean</string>
    <string name="track_artist_name_mj_mock">Michael Jackson</string>
    <string name="track_time_mj_mock">4:35</string>
    <string name="track_url_mj_mock">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/3d/9d/38/3d9d3811-71f0-3a0e-1ada-3004e56ff852/827969428726.jpg/100x100bb.jpg</string>
    <string name="track_name_bg_mock">Stayin\' Alive</string>
    <string name="track_artist_name_bg_mock">Bee Gees</string>
    <string name="track_time_bg_mock">4:10</string>
    <string name="track_url_bg_mock">https://is4-ssl.mzstatic.com/image/thumb/Music115/v4/1f/80/1f/1f801fc1-8c0f-ea3e-d3e5-387c6619619e/16UMGIM86640.rgb.jpg/100x100bb.jpg</string>
    <string name="track_name_lz_mock">Whole Lotta Love</string>
    <string name="track_artist_name_lz_mock">Led Zeppelin</string>
    <string name="track_time_lz_mock">5:33</string>
    <string name="track_url_lz_mock">https://is2-ssl.mzstatic.com/image/thumb/Music62/v4/7e/17/e3/7e17e33f-2efa-2a36-e916-7f808576cf6b/mzm.fyigqcbs.jpg/100x100bb.jpg</string>
    <string name="track_name_gnr_mock">Sweet Child O\'Mine</string>
    <string name="track_artist_name_gnr_mock">Guns N\' Roses</string>
    <string name="track_time_gnr_mock">5:03</string>
    <string name="track_url_gnr_mock">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/a0/4d/c4/a04dc484-03cc-02aa-fa82-5334fcb4bc16/18UMGIM24878.rgb.jpg/100x100bb.jpg</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="you_are_search">Вы искали</string>
    <string name="clean_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="default_play_time">00:00</string>
    <string name="playlists_tab_name">Плейлисты</string>
    <string name="favorites_tab_name">Избранные треки</string>
    <string name="create_playlist">Новый плейлист</string>
    <string name="playlist_placeholder">Вы не создали\nни одного плейлиста</string>
    <string name="favorites_placeholder">Ваша медиатека пуста</string>
    <string name="input_name_playlist_label">Название*</string>
    <string name="input_description_playlist_label">Описание</string>
    <string name="create_playlist_label">Новый плейлист</string>
    <string name="create_button_label">Создать</string>
    <string name="save_button_label">Сохранить</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="finish_playlist_creation_dialog_title">Завершить создание плейлиста?</string>
    <string name="finish_playlist_creation_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="cancel_button_label">Отмена</string>
    <string name="finish_button_label">Завершить</string>
    <string name="playlist_created_message">Плейлист %s создан</string>
    <string name="added_to_playlist">Добавлено в плейлист %s</string>
    <string name="already_added_to_playlist">Трек уже добавлен в плейлист %s</string>
    <string name="added_to_playlist_title">Добавить в плейлист</string>
    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="minutes_count">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
    <string name="playlist_info_format">%1$s • %2$s</string>
    <string name="name_of_playlist">Name of playlist</string>
    <string name="_2022">2022</string>

    <string name="confirm_delete_track">Хотите удалить трек?</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>

    <string name="no_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="confirm_delete_playlist_message">Хотите удалить плейлист «%s»?</string>
    <string name="playlist_share_track_format">%1$d. %2$s - %3$s (%4$s)</string>
    <string name="no_internet_connection">Отсутствует подключение к интернету</string>
    <string name="_300_98">300 минут • 98 треков</string>
    <string name="settings_title">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="nothing_found_text">Ничего не найдено</string>
    <string name="error_text">Ошибка</string>
    <string name="clear_history_text">Очистить историю</string>
    <string name="tab_content_format">Контент вкладки %d</string>
</resources>