<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    style="@style/DefaultLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.ui.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/dimen_14dp"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:text="@string/settings" />
    </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchTheme"
        style="@style/SettingsSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="@dimen/dimen_16dp"
        android:paddingVertical="@dimen/dimen_21dp"
        android:text="@string/theme_option"
        android:thumb="@drawable/ic_thumb"
        android:track="@drawable/ic_track" />

    <TextView
        android:id="@+id/share_button"
        style="@style/SettingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/dimen_16dp"
        android:paddingVertical="@dimen/dimen_21dp"
        android:text="@string/share_app_option"
        app:drawableEndCompat="@drawable/ic_share" />

    <TextView
        android:id="@+id/support_button"
        style="@style/SettingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/dimen_16dp"
        android:paddingVertical="@dimen/dimen_21dp"
        android:text="@string/call_support_option"
        app:drawableEndCompat="@drawable/ic_support" />

    <TextView
        android:id="@+id/license_button"
        style="@style/SettingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/dimen_16dp"
        android:paddingVertical="@dimen/dimen_21dp"
        android:text="@string/license_option"
        app:drawableEndCompat="@drawable/ic_arrow_forward_24" />

</LinearLayout>