<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    style="@style/Main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/dimen_16dp"
        android:paddingTop="@dimen/dimen_14dp"
        android:paddingBottom="@dimen/dimen_16dp"
        android:text="@string/app_name"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/search_button"
        style="@style/MainButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:text="@string/search_title"
        app:icon="@drawable/ic_search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/dimen_8dp" />

    <Button
        android:id="@+id/music_button"
        style="@style/MainButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_weight="1"
        android:text="@string/media_library"
        app:icon="@drawable/ic_music"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/dimen_8dp" />

    <Button
        android:id="@+id/settings_button"
        style="@style/MainButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_weight="1"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/dimen_8dp" />
</LinearLayout>