<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_layout"
    style="@style/DefaultLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/leave_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_arrow_back_48" />

        <TextView
            style="@style/Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:paddingTop="@dimen/dimen_14dp"
            android:paddingBottom="@dimen/dimen_16dp"
            android:text="@string/search_title" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:paddingHorizontal="@dimen/dimen_16dp">

        <EditText
            android:id="@+id/search_input"
            style="@style/SearchEditText"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:drawableStart="@drawable/ic_search_input_16"
            android:drawablePadding="@dimen/dimen_8dp"
            android:hint="@string/search_hint"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="13dp"
            android:radius="@dimen/dimen_16dp"
            android:singleLine="true"
            android:textSize="@dimen/string_16sp"
            android:theme="@style/Theme.SearchEditText" />

        <ImageView
            android:id="@+id/clear_search_button"
            style="@style/ClearSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:paddingHorizontal="12dp"
            android:paddingVertical="10dp"
            android:src="@drawable/ic_clear_button_16"
            android:visibility="gone"
            tools:visibility="visible" />
    </FrameLayout>

    <TextView
        android:id="@+id/search_history_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center_horizontal"
        android:text="@string/you_are_search"
        android:textColor="?attr/baseTextColor"
        android:textSize="19sp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <LinearLayout
        android:id="@+id/NothingFoundPlaceholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_nothing_found" />

        <TextView
            style="@style/SearchTextPlaceholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/nothing_found"
            android:textSize="19sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/SomethingWrongPlaceholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_no_internet" />

        <TextView
            style="@style/SearchTextPlaceholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:gravity="center_horizontal"
            android:text="@string/something_wrong"
            android:textSize="19sp" />

        <Button
            android:id="@+id/UpdateButton"
            style="@style/SearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>