<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/trackList"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingVertical="@dimen/dimen_8dp"
    android:paddingStart="13dp"
    android:paddingEnd="12dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/trackImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.App.CornerRadius.2dp"
        tools:src="@drawable/ic_track_placeholder" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_8dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/trackName"
            style="@style/TrackName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="@dimen/string_16sp"
            tools:text="@string/track_name_nirvana_mock" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/artistName"
                style="@style/Track"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="@dimen/string_11sp"
                tools:text="@string/track_artist_name_nirvana_mock" />

            <ImageView
                android:id="@+id/delimiter"
                style="@style/TrackDelimiter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delimiter" />

            <TextView
                android:id="@+id/trackTime"
                style="@style/Track"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="@dimen/string_11sp"
                tools:text="@string/track_time_nirvana_mock" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/toPlayerButton"
        style="@style/ArrowForward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_forward_24" />
</LinearLayout>